# tech_elevator

./: .gitignore  README.md  pyproject.toml
crawler/tech_job_crawler/: scrapy.cfg
crawler/tech_job_crawler/tech_job_crawler/: middlewares.py  pipelines.py  settings.py
crawler/tech_job_crawler/tech_job_crawler/items/job_104/: __init__.py  items.py
crawler/tech_job_crawler/tech_job_crawler/spiders/: job104.py
crawler/tech_job_crawler/tech_job_crawler/utils/response/: __init__.py  url.py
